--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha",
+    "start": "node app.js & live-server",
+    "dev": "nodemon app.js & live-server"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +21,12 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "eslint": "^4.10.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
     "mocha": "3.2.0",
     "nodemon": "^1.12.1"
   }
